[gd_scene load_steps=22 format=3 uid="uid://c76fjfxv5tscp"]

[ext_resource type="Script" path="res://scripts/lever.gd" id="1_nqtca"]
[ext_resource type="Texture2D" uid="uid://duwxclu86fc22" path="res://assets/tilemap.png" id="2_wsu3w"]
[ext_resource type="PackedScene" uid="uid://bpfh8pkm6cnrk" path="res://scenes/player_killzone.tscn" id="3_nogfy"]
[ext_resource type="PackedScene" uid="uid://bmnc0h3qkeh0o" path="res://scenes/enemy_killzone.tscn" id="4_vw5lk"]
[ext_resource type="Texture2D" uid="uid://c6hcb6w4osxka" path="res://assets/miscellaneous.png" id="5_m8ki6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fyu1s"]
atlas = ExtResource("2_wsu3w")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nyla"]
atlas = ExtResource("2_wsu3w")
region = Rect2(112, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b487l"]
atlas = ExtResource("2_wsu3w")
region = Rect2(128, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6brks"]
atlas = ExtResource("2_wsu3w")
region = Rect2(144, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyaqi"]
atlas = ExtResource("2_wsu3w")
region = Rect2(160, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wj45"]
atlas = ExtResource("2_wsu3w")
region = Rect2(176, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_cyoj7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyu1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nyla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b487l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6brks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyaqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wj45")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uoesh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e28i4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pcql2"]
size = Vector2(5, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldnfj"]
atlas = ExtResource("5_m8ki6")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sjfn"]
atlas = ExtResource("5_m8ki6")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt2qa"]
atlas = ExtResource("5_m8ki6")
region = Rect2(64, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_n7ix7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldnfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sjfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt2qa")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wh3t6"]
size = Vector2(14, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_aut24"]
radius = 13.0384

[node name="levers" type="Area2D"]
scale = Vector2(0.359999, 0.359999)
script = ExtResource("1_nqtca")

[node name="pit_trap" type="Area2D" parent="."]
position = Vector2(89, -6)
scale = Vector2(4.07926, 4.07926)

[node name="pit_sprite" type="AnimatedSprite2D" parent="pit_trap"]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_cyoj7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="pit_trap"]
shape = SubResource("RectangleShape2D_uoesh")

[node name="player_killzone" parent="pit_trap" instance=ExtResource("3_nogfy")]

[node name="player_collision" type="CollisionShape2D" parent="pit_trap/player_killzone"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_e28i4")

[node name="enemy_killzone" parent="pit_trap" instance=ExtResource("4_vw5lk")]

[node name="enemy_collision" type="CollisionShape2D" parent="pit_trap/enemy_killzone"]
unique_name_in_owner = true
position = Vector2(8.87721, 0)
shape = SubResource("RectangleShape2D_pcql2")

[node name="lever_sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(-72, -10)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_n7ix7")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-71.9999, 2.00003)
scale = Vector2(3.08, 3.08)
shape = SubResource("RectangleShape2D_wh3t6")
disabled = true

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
offset_left = -114.0
offset_top = -36.0
offset_right = -106.0
offset_bottom = -28.0
scale = Vector2(9.16361, 8.22107)
flat = true

[node name="Timer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-73.9999, -3.36938)
scale = Vector2(3.15061, 2.63061)
shape = SubResource("CircleShape2D_aut24")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
